fix: Dialog button styling on iOS

--- a/src/components/Shared/Radix/Dialogs/index.module.scss
+++ b/src/components/Shared/Radix/Dialogs/index.module.scss
@@ -42,6 +42,7 @@
   border: 0;
   width: 100%;
   flex: 1;
+  color: rgb(var(--foreground-color));
   border-top: 1px solid rgb(var(--border-color));
   cursor: pointer;
 }
